--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                    <a href="glass.jpg">
                    <img src="glass.jpg" alt="glass"></a>
                    <a href="view.jpg">
-                   <img src="view.jpg" alt="view"
+                   <img src="view.jpg" alt="view">
                      </a>
                 <a href="B&W Bridge.jpg">
                 <img src="B&W Bridge.jpg" alt="B&W Bridge"></a>
