--- a/index.html
+++ b/index.html
@@ -1,232 +1,277 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Malachi Patton | Creative Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio showcasing graphic design projects and photography by Malachi Patton."
+    />
 
-<head>
-  <title>Portfolio Website</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="style.css">
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-</head>
-
-<body>
-
-
-  <div class="w3-top">
-    <div class="w3-bar w3-black w3-wide w3-padding w3-card">
-      <a href="#home" class="w3-bar-item w3-button"><b>MP</b> Creativity</a>
-
-      <div class="w3-right w3-hide-small">
-        <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-        <a href="#photography" class="w3-bar-item w3-button">Photography</a>
-        
+  <body>
+    <!-- ========== NAVIGATION ========== -->
+    <nav class="w3-top">
+      <div class="w3-bar w3-black w3-wide w3-padding w3-card">
+        <a href="#home" class="w3-bar-item w3-button"> <b>MP</b> Creativity </a>
+        <div class="w3-right w3-hide-small">
+          <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+          <a href="#photography" class="w3-bar-item w3-button">Photography</a>
+        </div>
       </div>
-    </div>
-  </div>
+    </nav>
 
-
-  <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-    <img class="w3-image" src="City_min.jpg" alt="Architecture" width="1500" height="800">
-    <div class="w3-display-middle w3-margin-top w3-center">
-      <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>MP</b></span> <span
-          class="w3-hide-small w3-text-light-grey">Creativity</span></h1>
-    </div>
-  </header>
-
-  <!-- PROJECTS SECTION -->
-  <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
-      <span class="w3-padding w3-black w3-opacity-min">
-        <b>Projects</b>
-      </span>
-    </h3>
-
-    <div class="projects-grid">
-
-      <a href="coffee.png"><img src="coffee.png" alt="Coffee Project"></a>
-      <a href="park.png"><img src="park.png" alt="Park Project"></a>
-      <a href="eye.png"><img src="eye.png" alt="Eye Project"></a>
-      <a href="Pekkle.png"><img src="Pekkle.png" alt="Pekkle Project"></a>
-
-      <a href="Drugs.png"><img src="Drugs.png" alt="Drugs Project"></a>
-      <a href="PB3_BIT.jpg"><img src="PB3_BIT.jpg" alt="PB3 Project"></a>
-
-
-      <a href="infograph completed p6.jpg">
-        <img src="infograph completed p6.jpg" alt="Infographic Project 2">
-      </a>
-
-      <a href="Poster.jpg"><img src="Poster.jpg" alt="Poster Project"></a>
-
-
-      <a href="Plant_color.jpg"><img src="Plant_color.jpg" alt="Plant Project"></a>
-      <a href="spotify_m&a.jpg"><img src="spotify_m&a.jpg" alt="Spotify Project"></a>
-      <a href="wbp2.png"><img src="wbp2.png" alt="WBP Project"></a>
-      <a href="Editorial_SB.jpg"><img src="Editorial_SB.jpg" alt="Editorial Project"></a>
-      <a href="Billboard.jpg"><img src="Billboard.jpg" alt="Billboard Project"></a>
-      <a href="billboard asset_pg_2-3.jpg">
-        <img src="billboard asset_pg_2-3.jpg" alt="Billboard Asset 1">
-      </a>
-      <a href="billboard asset_pg_2-32.jpg">
-        <img src="billboard asset_pg_2-32.jpg" alt="Billboard Asset 2">
-      </a>
-      <a href="Billboard final 1.jpg">
-        <img src="Billboard final 1.jpg" alt="Billboard Final">
-      </a>
-
-
-      
-      <a href="Horror_Page.jpg"><img src="Horror_Page.jpg" alt="Horror Page"></a>
-      <a href="OHG-POSTER_QR_code.jpg">
-        <img src="OHG-POSTER_QR_code.jpg" alt="OHG Poster">
-      </a>
-      <a href="PS9.png"><img src="PS9.png" alt="PS9 Project"></a>
-
-      <a href="Horror_pro.jpg"><img src="Horror_pro.jpg" alt="Horror Project"></a>
-      <a href="Hi-Chew.jpg"><img src="Hi-Chew.jpg" alt="Hi-Chew Project"></a>
-
-      <a href="final.jpg"><img src="final.jpg" alt="Final Project"></a>
-
-
-    </div>
-  </div>
-
-
-
-
-
-
-  <div class="w3-container w3-padding-32" id="photography">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">
-      <span class="w3-padding w3-black w3-opacity-min">
-        <b>Photography</b>
-    </h3>
-
-    <div class="photo-grid-row">
-      <div class="photo-grid-column">
-        <a href="WTC.jpg">
-          <img src="WTC.jpg" alt="WTC"></a>
-        <a href="Amir blur.jpg">
-          <img src="Amir blur.jpg" alt="Amir blur"></a>
-        <a href="bottle.jpg">
-          <img src="bottle.jpg" alt="bottle"></a>
-        <a href="Lau.jpg">
-          <img src="Lau.jpg" alt="Lau"></a>
-        <a href="think different 1.jpg">
-          <img src="think different 1.jpg" alt="think different 1"></a>
-        <a href="timesq.jpg">
-          <img src="timesq.jpg" alt="timesq"></a>
-        <a href="Dunk 1.jpg">
-          <img src="Dunk 1.jpg" alt="dunk 1"></a>
-        <a href="lights.jpg">
-          <img src="lights.jpg" alt="lights"></a>
-        <a href="DSC09258.jpg">
-          <img src="DSC09258.jpg" alt="DSC09258">
-        </a>
-        <a href="DSC09730.jpg">
-          <img src="DSC09730.jpg" alt="DSC09730">
-        </a>
-
+    <!-- ========== HERO SECTION ========== -->
+    <header
+      class="w3-display-container w3-content w3-wide"
+      style="max-width: 1500px"
+      id="home"
+    >
+      <img
+        class="w3-image"
+        src="City_min.jpg"
+        alt="City skyline hero image"
+        width="1500"
+        height="800"
+      />
+      <div class="w3-display-middle w3-margin-top w3-center">
+        <h1 class="w3-xxlarge w3-text-white">
+          <span class="w3-padding w3-black w3-opacity-min"><b>MP</b></span>
+          <span class="w3-hide-small w3-text-light-grey">Creativity</span>
+        </h1>
       </div>
-      <div class="photo-grid-column">
-        <a href="Nat.jpg">
-          <img src="Nat.jpg" alt="Nat"></a>
-        <a href="Ceaser.jpg">
-          <img src="Ceaser.jpg" alt="Ceaser"></a>
-        <a href="IMG_9305.jpg">
-          <img src="IMG_9305.jpg" alt="IMG_9305"></a>
-        <a href="dress.jpg">
-          <img src="dress.jpg" alt="dress"></a>
-        <a href="dance.jpg">
-          <img src="dance.jpg" alt="dance"></a>
-        <a href="Ant.jpg">
-          <img src="Ant.jpg" alt="Ant"></a>
-        <a href="food.jpg">
-          <img src="food.jpg" alt="food"></a>
-        <a href="Dunk 2.jpg">
-          <img src="Dunk 2.jpg" alt="dunk 2"></a>
-        <a href="IMG_9300.jpg" alt="IMG_9300"></a>
-        <a href="DSC09538.jpg">
-          <img src="DSC09538.jpg" alt="DSC09538"></a>
-        <a href="DSC09853.jpg">
-          <img src="DSC09853.jpg" alt="DSC09853"></a>
+    </header>
+
+    <!-- ========== PROJECTS SECTION ========== -->
+    <section class="w3-container w3-padding-32" id="projects">
+      <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+        <span class="w3-padding w3-black w3-opacity-min">
+          <b>Projects</b>
+        </span>
+      </h2>
+
+      <div class="projects-grid">
+        <!-- Row 1 -->
+        <a href="coffee.png"
+          ><img src="coffee.png" alt="Coffee branding project" loading="lazy"
+        /></a>
+        <a href="park.png"
+          ><img src="park.png" alt="Park illustration" loading="lazy"
+        /></a>
+        <a href="eye.png"
+          ><img src="eye.png" alt="Eye illustration" loading="lazy"
+        /></a>
+        <a href="Pekkle.png"
+          ><img src="Pekkle.png" alt="Pekkle character design" loading="lazy"
+        /></a>
+
+        <!-- Row 2 -->
+        <a href="Drugs.png"
+          ><img src="Drugs.png" alt="Anti-drug campaign poster" loading="lazy"
+        /></a>
+        <a href="infograph completed p6.jpg"
+          ><img
+            src="infograph completed p6.jpg"
+            alt="Infographic design"
+            loading="lazy"
+        /></a>
+        <a href="Poster.jpg"
+          ><img src="Poster.jpg" alt="Poster design" loading="lazy"
+        /></a>
+        <a href="Billboard.jpg"
+          ><img src="Billboard.jpg" alt="Billboard design" loading="lazy"
+        /></a>
+
+        <!-- Billboard series -->
+        <a href="billboard asset_pg_2-3.jpg"
+          ><img
+            src="billboard asset_pg_2-3.jpg"
+            alt="Billboard asset 1"
+            loading="lazy"
+        /></a>
+        <a href="billboard asset_pg_2-32.jpg"
+          ><img
+            src="billboard asset_pg_2-32.jpg"
+            alt="Billboard asset 2"
+            loading="lazy"
+        /></a>
+        <a href="Billboard final 1.jpg"
+          ><img
+            src="Billboard final 1.jpg"
+            alt="Billboard final design"
+            loading="lazy"
+        /></a>
+        <a href="final.jpg"
+          ><img src="final.jpg" alt="Final project" loading="lazy"
+        /></a>
       </div>
+    </section>
 
-      <div class="photo-grid-column">
-        <a href="leaf.jpg">
-          <img src="leaf.jpg" alt="leaf"></a>
-        <a href="pole.jpg">
-          <img src="pole.jpg" alt="pole"></a>
-        <a href="DSC08158.jpg">
-          <img src="DSC08158.jpg" alt="DSC08158"></a>
-        <a href="B5.jpg">
-          <img src="B5.jpg" alt="B5"></a>
-        <a href="RP.jpg">
-          <img src="RP.jpg" alt="rp"></a>
-        <a href="Sea.jpg">
-          <img src="Sea.jpg" alt="sea"></a>
-        <a href="IMG_9271.jpg">
-          <img src="IMG_9271.jpg" alt="IMG_9271"></a>
-        <a href="IMG_0066.jpg">
-          <img src="IMG_0066.jpg" alt="IMG_0066"></a>
-        <a href="IMG_0067.jpg">
-          <img src="IMG_0067.jpg" alt="IMG_0067"></a>
-        <a href="APC_0068.jpg">
-          <img src="APC_0068.jpg" alt="APC_0068"></a>
-        <a href="IMG_0198.jpg">
-          <img src="IMG_0198.jpg" alt="IMG_0198"></a>
+    <!-- ========== PHOTOGRAPHY SECTION ========== -->
+    <section class="w3-container w3-padding-32" id="photography">
+      <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">
+        <span class="w3-padding w3-black w3-opacity-min">
+          <b>Photography</b>
+        </span>
+      </h2>
 
+      <div class="photo-grid-row">
+        <!-- Architecture & Cityscapes -->
+        <a href="WTC.jpg"
+          ><img src="WTC.jpg" alt="World Trade Center" loading="lazy"
+        /></a>
+        <a href="Brooklyn Bridge.jpg"
+          ><img src="Brooklyn Bridge.jpg" alt="Brooklyn Bridge" loading="lazy"
+        /></a>
+        <a href="B&W Bridge.jpg"
+          ><img
+            src="B&W Bridge.jpg"
+            alt="Bridge in black and white"
+            loading="lazy"
+        /></a>
+        <a href="Blue Bridge.jpg"
+          ><img
+            src="Blue Bridge.jpg"
+            alt="Bridge with blue tones"
+            loading="lazy"
+        /></a>
+        <a href="Purple Bridge.jpg"
+          ><img
+            src="Purple Bridge.jpg"
+            alt="Bridge with purple tones"
+            loading="lazy"
+        /></a>
+        <a href="timesq.jpg"
+          ><img src="timesq.jpg" alt="Times Square" loading="lazy"
+        /></a>
+        <a href="lights.jpg"
+          ><img src="lights.jpg" alt="City lights" loading="lazy"
+        /></a>
+
+        <!-- Portraits -->
+        <a href="Amir blur.jpg"
+          ><img src="Amir blur.jpg" alt="Portrait of Amir" loading="lazy"
+        /></a>
+        <a href="Lau.jpg"
+          ><img src="Lau.jpg" alt="Portrait of Lau" loading="lazy"
+        /></a>
+        <a href="Nat.jpg"
+          ><img src="Nat.jpg" alt="Portrait of Nat" loading="lazy"
+        /></a>
+        <a href="Ceaser.jpg"
+          ><img src="Ceaser.jpg" alt="Portrait of Ceaser" loading="lazy"
+        /></a>
+        <a href="Ant.jpg"
+          ><img src="Ant.jpg" alt="Portrait of Ant" loading="lazy"
+        /></a>
+
+        <!-- Sports -->
+        <a href="Dunk 1.jpg"
+          ><img src="Dunk 1.jpg" alt="Basketball dunk shot 1" loading="lazy"
+        /></a>
+        <a href="Dunk 2.jpg"
+          ><img src="Dunk 2.jpg" alt="Basketball dunk shot 2" loading="lazy"
+        /></a>
+        <a href="bball 1.jpg"
+          ><img src="bball 1.jpg" alt="Basketball game" loading="lazy"
+        /></a>
+        <a href="jump.jpg"
+          ><img src="jump.jpg" alt="Jump shot" loading="lazy"
+        /></a>
+        <a href="dance.jpg"
+          ><img src="dance.jpg" alt="Dance performance" loading="lazy"
+        /></a>
+
+        <!-- Still Life & Objects -->
+        <a href="bottle.jpg"
+          ><img src="bottle.jpg" alt="Bottle still life" loading="lazy"
+        /></a>
+        <a href="glass.jpg"
+          ><img src="glass.jpg" alt="Glass still life" loading="lazy"
+        /></a>
+        <a href="food.jpg"
+          ><img src="food.jpg" alt="Food photography" loading="lazy"
+        /></a>
+        <a href="dress.jpg"
+          ><img src="dress.jpg" alt="Dress photography" loading="lazy"
+        /></a>
+
+        <!-- Nature & Landscapes -->
+        <a href="leaf.jpg"
+          ><img src="leaf.jpg" alt="Leaf close-up" loading="lazy"
+        /></a>
+        <a href="Sea.jpg"
+          ><img src="Sea.jpg" alt="Sea landscape" loading="lazy"
+        /></a>
+        <a href="sunset.jpg"
+          ><img src="sunset.jpg" alt="Sunset" loading="lazy"
+        /></a>
+        <a href="sunset 2.jpg"
+          ><img src="sunset 2.jpg" alt="Sunset variation" loading="lazy"
+        /></a>
+        <a href="Purple.jpg"
+          ><img src="Purple.jpg" alt="Purple sky" loading="lazy"
+        /></a>
+        <a href="view.jpg"
+          ><img src="view.jpg" alt="Scenic view" loading="lazy"
+        /></a>
+
+        <!-- Egg Series -->
+        <a href="Egg 1.jpg"
+          ><img src="Egg 1.jpg" alt="Egg photography 1" loading="lazy"
+        /></a>
+        <a href="egg 3.jpg"
+          ><img src="egg 3.jpg" alt="Egg photography 3" loading="lazy"
+        /></a>
+        <a href="egg 4.jpg"
+          ><img src="egg 4.jpg" alt="Egg photography 4" loading="lazy"
+        /></a>
+        <a href="egg 5.jpg"
+          ><img src="egg 5.jpg" alt="Egg photography 5" loading="lazy"
+        /></a>
+        <a href="egg 6.jpg"
+          ><img src="egg 6.jpg" alt="Egg photography 6" loading="lazy"
+        /></a>
+
+        <!-- Other -->
+        <a href="think different 1.jpg"
+          ><img
+            src="think different 1.jpg"
+            alt="Think Different artwork"
+            loading="lazy"
+        /></a>
+        <a href="pole.jpg"
+          ><img src="pole.jpg" alt="Pole photography" loading="lazy"
+        /></a>
+        <a href="DSC08158.jpg"
+          ><img src="DSC08158.jpg" alt="Photography DSC08158" loading="lazy"
+        /></a>
+        <a href="DSC08739.jpg"
+          ><img src="DSC08739.jpg" alt="Photography DSC08739" loading="lazy"
+        /></a>
+        <a href="B5.jpg"
+          ><img src="B5.jpg" alt="B5 photography" loading="lazy"
+        /></a>
+        <a href="RP.jpg"
+          ><img src="RP.jpg" alt="RP photography" loading="lazy"
+        /></a>
+        <a href="Lab12 d2.jpg"
+          ><img src="Lab12 d2.jpg" alt="Lab 12 photography" loading="lazy"
+        /></a>
+        <a href="train.jpg"
+          ><img src="train.jpg" alt="Train photography" loading="lazy"
+        /></a>
       </div>
-      <div class="photo-grid-column">
-        <a href="DSC08739.jpg">
-          <img src="DSC08739.jpg" alt="DSC08739"></a>
-        <a href="Brooklyn Bridge.jpg">
-          <img src="Brooklyn Bridge.jpg" alt="Brooklyn Bridge"></a>
-        <a href="Lab12 d2.jpg">
-          <img src="Lab12 d2.jpg" alt="Lab12 d2"></a>
-        <a href="sunset 2.jpg">
-          <img src="sunset 2.jpg" alt="sunset 2"></a>
-        <a href="Purple.jpg">
-          <img src="Purple.jpg" alt="purple"></a>
-        <a href="glass.jpg">
-          <img src="glass.jpg" alt="glass"></a>
-        <a href="view.jpg">
-          <img src="view.jpg" alt="view" </a>
-          <a href="B&W Bridge.jpg">
-            <img src="B&W Bridge.jpg" alt="B&W Bridge"></a>
-          <a href="Blue Bridge.jpg">
-            <img src="Blue Bridge.jpg" alt="Blue Bridge"></a>
-          <a href="sunset.jpg">
-            <img src="sunset.jpg" alt="sunset"></a>
-          <a href="Egg 1.jpg">
-            <img src="Egg 1.jpg" alt="egg 1"></a>
-          <a href="egg 3.jpg">
-            <img src="egg 3.jpg" alt="egg 3"></a>
-          <a href="egg 6.jpg">
-            <img src="egg 6.jpg" alt="egg 6"></a>
-          <a href="DSC08204.jpg">
-            <img src="DSC08204.jpg" alt="DSC08204"></a>
-          <a href="DSC00080.jpg">
-            <img src="DSC00080.jpg" alt="DSC00080"></a>
-          <a href="IMG_9300.jpg">
-            <img src="IMG_9300.jpg" alt="IMG_9300"></a>
+    </section>
 
-
-
-      </div>
-
-
-    </div>
-  </div>
-  
-
-
-
-  <footer class="w3-center w3-black w3-padding-16">
-    <p> Malachi Patton</p>
-
-
-</body>
-
+    <!-- ========== FOOTER ========== -->
+    <footer class="w3-center w3-black w3-padding-16">
+      <p>&copy; 2025 Malachi Patton. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
