Include all existing images in portfolio

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </h2>
 
       <div class="projects-grid">
-        <!-- Row 1 -->
+        <!-- Illustrations & Branding -->
         <a href="coffee.png"
           ><img src="coffee.png" alt="Coffee branding project" loading="lazy"
         /></a>
@@ -69,25 +69,60 @@
         <a href="Pekkle.png"
           ><img src="Pekkle.png" alt="Pekkle character design" loading="lazy"
         /></a>
-
-        <!-- Row 2 -->
         <a href="Drugs.png"
           ><img src="Drugs.png" alt="Anti-drug campaign poster" loading="lazy"
+        /></a>
+        <a href="spider.png"
+          ><img src="spider.png" alt="Spider illustration" loading="lazy"
+        /></a>
+        <a href="kobe.png"
+          ><img src="kobe.png" alt="Kobe tribute" loading="lazy"
+        /></a>
+        <a href="TS.png"
+          ><img src="TS.png" alt="TS project" loading="lazy"
+        /></a>
+        <a href="PS9.png"
+          ><img src="PS9.png" alt="PS9 project" loading="lazy"
+        /></a>
+
+        <!-- Posters & Print -->
+        <a href="Poster.jpg"
+          ><img src="Poster.jpg" alt="Poster design" loading="lazy"
+        /></a>
+        <a href="Poster2.jpg"
+          ><img src="Poster2.jpg" alt="Poster design 2" loading="lazy"
+        /></a>
+        <a href="Horror_Page.jpg"
+          ><img src="Horror_Page.jpg" alt="Horror page design" loading="lazy"
+        /></a>
+        <a href="Horror_pro.jpg"
+          ><img src="Horror_pro.jpg" alt="Horror project" loading="lazy"
+        /></a>
+        <a href="OHG-POSTER_QR_code.jpg"
+          ><img src="OHG-POSTER_QR_code.jpg" alt="OHG poster" loading="lazy"
+        /></a>
+        <a href="Hi-Chew.jpg"
+          ><img src="Hi-Chew.jpg" alt="Hi-Chew project" loading="lazy"
+        /></a>
+
+        <!-- Infographics -->
+        <a href="infograph completed p5.jpg"
+          ><img
+            src="infograph completed p5.jpg"
+            alt="Infographic page 5"
+            loading="lazy"
         /></a>
         <a href="infograph completed p6.jpg"
           ><img
             src="infograph completed p6.jpg"
-            alt="Infographic design"
+            alt="Infographic page 6"
             loading="lazy"
         /></a>
-        <a href="Poster.jpg"
-          ><img src="Poster.jpg" alt="Poster design" loading="lazy"
-        /></a>
+
+        <!-- Billboard Campaign -->
         <a href="Billboard.jpg"
           ><img src="Billboard.jpg" alt="Billboard design" loading="lazy"
         /></a>
-
-        <!-- Billboard series -->
         <a href="billboard asset_pg_2-3.jpg"
           ><img
             src="billboard asset_pg_2-3.jpg"
@@ -103,8 +138,22 @@
         <a href="Billboard final 1.jpg"
           ><img
             src="Billboard final 1.jpg"
-            alt="Billboard final design"
+            alt="Billboard final"
             loading="lazy"
+        /></a>
+
+        <!-- Other Projects -->
+        <a href="PB3_BIT.jpg"
+          ><img src="PB3_BIT.jpg" alt="PB3 project" loading="lazy"
+        /></a>
+        <a href="Plant_color.jpg"
+          ><img src="Plant_color.jpg" alt="Plant color project" loading="lazy"
+        /></a>
+        <a href="spotify_m&a.jpg"
+          ><img src="spotify_m&a.jpg" alt="Spotify project" loading="lazy"
+        /></a>
+        <a href="Editorial_SB.jpg"
+          ><img src="Editorial_SB.jpg" alt="Editorial project" loading="lazy"
         /></a>
         <a href="final.jpg"
           ><img src="final.jpg" alt="Final project" loading="lazy"
@@ -152,6 +201,9 @@
         <a href="lights.jpg"
           ><img src="lights.jpg" alt="City lights" loading="lazy"
         /></a>
+        <a href="train.jpg"
+          ><img src="train.jpg" alt="Train" loading="lazy"
+        /></a>
 
         <!-- Portraits -->
         <a href="Amir blur.jpg"
@@ -170,7 +222,7 @@
           ><img src="Ant.jpg" alt="Portrait of Ant" loading="lazy"
         /></a>
 
-        <!-- Sports -->
+        <!-- Sports & Action -->
         <a href="Dunk 1.jpg"
           ><img src="Dunk 1.jpg" alt="Basketball dunk shot 1" loading="lazy"
         /></a>
@@ -238,6 +290,76 @@
           ><img src="egg 6.jpg" alt="Egg photography 6" loading="lazy"
         /></a>
 
+        <!-- DSC Series -->
+        <a href="DSC08158.jpg"
+          ><img src="DSC08158.jpg" alt="DSC08158" loading="lazy"
+        /></a>
+        <a href="DSC08204.jpg"
+          ><img src="DSC08204.jpg" alt="DSC08204" loading="lazy"
+        /></a>
+        <a href="DSC08739.jpg"
+          ><img src="DSC08739.jpg" alt="DSC08739" loading="lazy"
+        /></a>
+        <a href="DSC09258.jpg"
+          ><img src="DSC09258.jpg" alt="DSC09258" loading="lazy"
+        /></a>
+        <a href="DSC09538.jpg"
+          ><img src="DSC09538.jpg" alt="DSC09538" loading="lazy"
+        /></a>
+        <a href="DSC09853.jpg"
+          ><img src="DSC09853.jpg" alt="DSC09853" loading="lazy"
+        /></a>
+        <a href="DSC09882.jpg"
+          ><img src="DSC09882.jpg" alt="DSC09882" loading="lazy"
+        /></a>
+        <a href="DSC00080.jpg"
+          ><img src="DSC00080.jpg" alt="DSC00080" loading="lazy"
+        /></a>
+
+        <!-- IMG Series -->
+        <a href="IMG_0066.jpg"
+          ><img src="IMG_0066.jpg" alt="IMG_0066" loading="lazy"
+        /></a>
+        <a href="IMG_0067.jpg"
+          ><img src="IMG_0067.jpg" alt="IMG_0067" loading="lazy"
+        /></a>
+        <a href="IMG_0118.jpg"
+          ><img src="IMG_0118.jpg" alt="IMG_0118" loading="lazy"
+        /></a>
+        <a href="IMG_0142.jpg"
+          ><img src="IMG_0142.jpg" alt="IMG_0142" loading="lazy"
+        /></a>
+        <a href="IMG_0198.jpg"
+          ><img src="IMG_0198.jpg" alt="IMG_0198" loading="lazy"
+        /></a>
+        <a href="IMG_0206.jpg"
+          ><img src="IMG_0206.jpg" alt="IMG_0206" loading="lazy"
+        /></a>
+        <a href="IMG_0282.jpg"
+          ><img src="IMG_0282.jpg" alt="IMG_0282" loading="lazy"
+        /></a>
+        <a href="IMG_1021.jpg"
+          ><img src="IMG_1021.jpg" alt="IMG_1021" loading="lazy"
+        /></a>
+        <a href="IMG_9215.jpg"
+          ><img src="IMG_9215.jpg" alt="IMG_9215" loading="lazy"
+        /></a>
+        <a href="IMG_9269.jpg"
+          ><img src="IMG_9269.jpg" alt="IMG_9269" loading="lazy"
+        /></a>
+        <a href="IMG_9271.jpg"
+          ><img src="IMG_9271.jpg" alt="IMG_9271" loading="lazy"
+        /></a>
+        <a href="IMG_9300.jpg"
+          ><img src="IMG_9300.jpg" alt="IMG_9300" loading="lazy"
+        /></a>
+        <a href="IMG_9305.jpg"
+          ><img src="IMG_9305.jpg" alt="IMG_9305" loading="lazy"
+        /></a>
+        <a href="APC_0068.jpg"
+          ><img src="APC_0068.jpg" alt="APC_0068" loading="lazy"
+        /></a>
+
         <!-- Other -->
         <a href="think different 1.jpg"
           ><img
@@ -248,12 +370,6 @@
         <a href="pole.jpg"
           ><img src="pole.jpg" alt="Pole photography" loading="lazy"
         /></a>
-        <a href="DSC08158.jpg"
-          ><img src="DSC08158.jpg" alt="Photography DSC08158" loading="lazy"
-        /></a>
-        <a href="DSC08739.jpg"
-          ><img src="DSC08739.jpg" alt="Photography DSC08739" loading="lazy"
-        /></a>
         <a href="B5.jpg"
           ><img src="B5.jpg" alt="B5 photography" loading="lazy"
         /></a>
@@ -263,8 +379,14 @@
         <a href="Lab12 d2.jpg"
           ><img src="Lab12 d2.jpg" alt="Lab 12 photography" loading="lazy"
         /></a>
-        <a href="train.jpg"
-          ><img src="train.jpg" alt="Train photography" loading="lazy"
+        <a href="M1.jpg"
+          ><img src="M1.jpg" alt="M1 photography" loading="lazy"
+        /></a>
+        <a href="m2.jpg"
+          ><img src="m2.jpg" alt="M2 photography" loading="lazy"
+        /></a>
+        <a href="sp1.jpg"
+          ><img src="sp1.jpg" alt="SP1 photography" loading="lazy"
         /></a>
       </div>
     </section>
