--- a/index.html
+++ b/index.html
@@ -56,107 +56,80 @@
       </h2>
 
       <div class="projects-grid">
-        <!-- Illustrations & Branding -->
         <a href="coffee.png"
-          ><img src="coffee.png" alt="Coffee branding project" loading="lazy"
+          ><img src="coffee.png" alt="Coffee Project" loading="lazy"
         /></a>
         <a href="park.png"
-          ><img src="park.png" alt="Park illustration" loading="lazy"
+          ><img src="park.png" alt="Park Project" loading="lazy"
         /></a>
         <a href="eye.png"
-          ><img src="eye.png" alt="Eye illustration" loading="lazy"
+          ><img src="eye.png" alt="Eye Project" loading="lazy"
         /></a>
         <a href="Pekkle.png"
-          ><img src="Pekkle.png" alt="Pekkle character design" loading="lazy"
+          ><img src="Pekkle.png" alt="Pekkle Project" loading="lazy"
         /></a>
         <a href="Drugs.png"
-          ><img src="Drugs.png" alt="Anti-drug campaign poster" loading="lazy"
+          ><img src="Drugs.png" alt="Drugs Project" loading="lazy"
         /></a>
-        <a href="spider.png"
-          ><img src="spider.png" alt="Spider illustration" loading="lazy"
-        /></a>
-        <a href="kobe.png"
-          ><img src="kobe.png" alt="Kobe tribute" loading="lazy"
-        /></a>
-        <a href="TS.png"
-          ><img src="TS.png" alt="TS project" loading="lazy"
-        /></a>
-        <a href="PS9.png"
-          ><img src="PS9.png" alt="PS9 project" loading="lazy"
-        /></a>
-
-        <!-- Posters & Print -->
-        <a href="Poster.jpg"
-          ><img src="Poster.jpg" alt="Poster design" loading="lazy"
-        /></a>
-        <a href="Poster2.jpg"
-          ><img src="Poster2.jpg" alt="Poster design 2" loading="lazy"
-        /></a>
-        <a href="Horror_Page.jpg"
-          ><img src="Horror_Page.jpg" alt="Horror page design" loading="lazy"
-        /></a>
-        <a href="Horror_pro.jpg"
-          ><img src="Horror_pro.jpg" alt="Horror project" loading="lazy"
-        /></a>
-        <a href="OHG-POSTER_QR_code.jpg"
-          ><img src="OHG-POSTER_QR_code.jpg" alt="OHG poster" loading="lazy"
-        /></a>
-        <a href="Hi-Chew.jpg"
-          ><img src="Hi-Chew.jpg" alt="Hi-Chew project" loading="lazy"
-        /></a>
-
-        <!-- Infographics -->
-        <a href="infograph completed p5.jpg"
-          ><img
-            src="infograph completed p5.jpg"
-            alt="Infographic page 5"
-            loading="lazy"
+        <a href="PB3_BIT.jpg"
+          ><img src="PB3_BIT.jpg" alt="PB3 Project" loading="lazy"
         /></a>
         <a href="infograph completed p6.jpg"
           ><img
             src="infograph completed p6.jpg"
-            alt="Infographic page 6"
+            alt="Infographic Project"
             loading="lazy"
         /></a>
-
-        <!-- Billboard Campaign -->
+        <a href="Poster.jpg"
+          ><img src="Poster.jpg" alt="Poster Project" loading="lazy"
+        /></a>
+        <a href="Plant_color.jpg"
+          ><img src="Plant_color.jpg" alt="Plant Project" loading="lazy"
+        /></a>
+        <a href="spotify_m&a.jpg"
+          ><img src="spotify_m&a.jpg" alt="Spotify Project" loading="lazy"
+        /></a>
+        <a href="Editorial_SB.jpg"
+          ><img src="Editorial_SB.jpg" alt="Editorial Project" loading="lazy"
+        /></a>
         <a href="Billboard.jpg"
-          ><img src="Billboard.jpg" alt="Billboard design" loading="lazy"
+          ><img src="Billboard.jpg" alt="Billboard Project" loading="lazy"
         /></a>
         <a href="billboard asset_pg_2-3.jpg"
           ><img
             src="billboard asset_pg_2-3.jpg"
-            alt="Billboard asset 1"
+            alt="Billboard Asset 1"
             loading="lazy"
         /></a>
         <a href="billboard asset_pg_2-32.jpg"
           ><img
             src="billboard asset_pg_2-32.jpg"
-            alt="Billboard asset 2"
+            alt="Billboard Asset 2"
             loading="lazy"
         /></a>
         <a href="Billboard final 1.jpg"
           ><img
             src="Billboard final 1.jpg"
-            alt="Billboard final"
+            alt="Billboard Final"
             loading="lazy"
         /></a>
-
-        <!-- Other Projects -->
-        <a href="PB3_BIT.jpg"
-          ><img src="PB3_BIT.jpg" alt="PB3 project" loading="lazy"
+        <a href="Horror_Page.jpg"
+          ><img src="Horror_Page.jpg" alt="Horror Page" loading="lazy"
         /></a>
-        <a href="Plant_color.jpg"
-          ><img src="Plant_color.jpg" alt="Plant color project" loading="lazy"
+        <a href="OHG-POSTER_QR_code.jpg"
+          ><img src="OHG-POSTER_QR_code.jpg" alt="OHG Poster" loading="lazy"
         /></a>
-        <a href="spotify_m&a.jpg"
-          ><img src="spotify_m&a.jpg" alt="Spotify project" loading="lazy"
+        <a href="PS9.png"
+          ><img src="PS9.png" alt="PS9 Project" loading="lazy"
         /></a>
-        <a href="Editorial_SB.jpg"
-          ><img src="Editorial_SB.jpg" alt="Editorial project" loading="lazy"
+        <a href="Horror_pro.jpg"
+          ><img src="Horror_pro.jpg" alt="Horror Project" loading="lazy"
+        /></a>
+        <a href="Hi-Chew.jpg"
+          ><img src="Hi-Chew.jpg" alt="Hi-Chew Project" loading="lazy"
         /></a>
         <a href="final.jpg"
-          ><img src="final.jpg" alt="Final project" loading="lazy"
+          ><img src="final.jpg" alt="Final Project" loading="lazy"
         /></a>
       </div>
     </section>
@@ -170,138 +143,52 @@
       </h2>
 
       <div class="photo-grid-row">
-        <!-- Architecture & Cityscapes -->
-        <a href="WTC.jpg"
-          ><img src="WTC.jpg" alt="World Trade Center" loading="lazy"
+        <a href="WTC.jpg"><img src="WTC.jpg" alt="WTC" loading="lazy" /></a>
+        <a href="Amir blur.jpg"
+          ><img src="Amir blur.jpg" alt="Amir blur" loading="lazy"
         /></a>
-        <a href="Brooklyn Bridge.jpg"
-          ><img src="Brooklyn Bridge.jpg" alt="Brooklyn Bridge" loading="lazy"
+        <a href="bottle.jpg"
+          ><img src="bottle.jpg" alt="bottle" loading="lazy"
         /></a>
-        <a href="B&W Bridge.jpg"
+        <a href="Lau.jpg"><img src="Lau.jpg" alt="Lau" loading="lazy" /></a>
+        <a href="think different 1.jpg"
           ><img
-            src="B&W Bridge.jpg"
-            alt="Bridge in black and white"
-            loading="lazy"
-        /></a>
-        <a href="Blue Bridge.jpg"
-          ><img
-            src="Blue Bridge.jpg"
-            alt="Bridge with blue tones"
-            loading="lazy"
-        /></a>
-        <a href="Purple Bridge.jpg"
-          ><img
-            src="Purple Bridge.jpg"
-            alt="Bridge with purple tones"
+            src="think different 1.jpg"
+            alt="think different 1"
             loading="lazy"
         /></a>
         <a href="timesq.jpg"
-          ><img src="timesq.jpg" alt="Times Square" loading="lazy"
+          ><img src="timesq.jpg" alt="timesq" loading="lazy"
+        /></a>
+        <a href="Dunk 1.jpg"
+          ><img src="Dunk 1.jpg" alt="dunk 1" loading="lazy"
         /></a>
         <a href="lights.jpg"
-          ><img src="lights.jpg" alt="City lights" loading="lazy"
-        /></a>
-        <a href="train.jpg"
-          ><img src="train.jpg" alt="Train" loading="lazy"
-        /></a>
-
-        <!-- Portraits -->
-        <a href="Amir blur.jpg"
-          ><img src="Amir blur.jpg" alt="Portrait of Amir" loading="lazy"
-        /></a>
-        <a href="Lau.jpg"
-          ><img src="Lau.jpg" alt="Portrait of Lau" loading="lazy"
-        /></a>
-        <a href="Nat.jpg"
-          ><img src="Nat.jpg" alt="Portrait of Nat" loading="lazy"
-        /></a>
-        <a href="Ceaser.jpg"
-          ><img src="Ceaser.jpg" alt="Portrait of Ceaser" loading="lazy"
-        /></a>
-        <a href="Ant.jpg"
-          ><img src="Ant.jpg" alt="Portrait of Ant" loading="lazy"
-        /></a>
-
-        <!-- Sports & Action -->
-        <a href="Dunk 1.jpg"
-          ><img src="Dunk 1.jpg" alt="Basketball dunk shot 1" loading="lazy"
-        /></a>
-        <a href="Dunk 2.jpg"
-          ><img src="Dunk 2.jpg" alt="Basketball dunk shot 2" loading="lazy"
-        /></a>
-        <a href="bball 1.jpg"
-          ><img src="bball 1.jpg" alt="Basketball game" loading="lazy"
-        /></a>
-        <a href="jump.jpg"
-          ><img src="jump.jpg" alt="Jump shot" loading="lazy"
-        /></a>
-        <a href="dance.jpg"
-          ><img src="dance.jpg" alt="Dance performance" loading="lazy"
-        /></a>
-
-        <!-- Still Life & Objects -->
-        <a href="bottle.jpg"
-          ><img src="bottle.jpg" alt="Bottle still life" loading="lazy"
-        /></a>
-        <a href="glass.jpg"
-          ><img src="glass.jpg" alt="Glass still life" loading="lazy"
-        /></a>
-        <a href="food.jpg"
-          ><img src="food.jpg" alt="Food photography" loading="lazy"
-        /></a>
-        <a href="dress.jpg"
-          ><img src="dress.jpg" alt="Dress photography" loading="lazy"
-        /></a>
-
-        <!-- Nature & Landscapes -->
-        <a href="leaf.jpg"
-          ><img src="leaf.jpg" alt="Leaf close-up" loading="lazy"
-        /></a>
-        <a href="Sea.jpg"
-          ><img src="Sea.jpg" alt="Sea landscape" loading="lazy"
-        /></a>
-        <a href="sunset.jpg"
-          ><img src="sunset.jpg" alt="Sunset" loading="lazy"
-        /></a>
-        <a href="sunset 2.jpg"
-          ><img src="sunset 2.jpg" alt="Sunset variation" loading="lazy"
-        /></a>
-        <a href="Purple.jpg"
-          ><img src="Purple.jpg" alt="Purple sky" loading="lazy"
-        /></a>
-        <a href="view.jpg"
-          ><img src="view.jpg" alt="Scenic view" loading="lazy"
-        /></a>
-
-        <!-- Egg Series -->
-        <a href="Egg 1.jpg"
-          ><img src="Egg 1.jpg" alt="Egg photography 1" loading="lazy"
-        /></a>
-        <a href="egg 3.jpg"
-          ><img src="egg 3.jpg" alt="Egg photography 3" loading="lazy"
-        /></a>
-        <a href="egg 4.jpg"
-          ><img src="egg 4.jpg" alt="Egg photography 4" loading="lazy"
-        /></a>
-        <a href="egg 5.jpg"
-          ><img src="egg 5.jpg" alt="Egg photography 5" loading="lazy"
-        /></a>
-        <a href="egg 6.jpg"
-          ><img src="egg 6.jpg" alt="Egg photography 6" loading="lazy"
-        /></a>
-
-        <!-- DSC Series -->
-        <a href="DSC08158.jpg"
-          ><img src="DSC08158.jpg" alt="DSC08158" loading="lazy"
-        /></a>
-        <a href="DSC08204.jpg"
-          ><img src="DSC08204.jpg" alt="DSC08204" loading="lazy"
-        /></a>
-        <a href="DSC08739.jpg"
-          ><img src="DSC08739.jpg" alt="DSC08739" loading="lazy"
+          ><img src="lights.jpg" alt="lights" loading="lazy"
         /></a>
         <a href="DSC09258.jpg"
           ><img src="DSC09258.jpg" alt="DSC09258" loading="lazy"
+        /></a>
+        <a href="Nat.jpg"><img src="Nat.jpg" alt="Nat" loading="lazy" /></a>
+        <a href="Ceaser.jpg"
+          ><img src="Ceaser.jpg" alt="Ceaser" loading="lazy"
+        /></a>
+        <a href="IMG_9305.jpg"
+          ><img src="IMG_9305.jpg" alt="IMG_9305" loading="lazy"
+        /></a>
+        <a href="dress.jpg"
+          ><img src="dress.jpg" alt="dress" loading="lazy"
+        /></a>
+        <a href="dance.jpg"
+          ><img src="dance.jpg" alt="dance" loading="lazy"
+        /></a>
+        <a href="Ant.jpg"><img src="Ant.jpg" alt="Ant" loading="lazy" /></a>
+        <a href="food.jpg"><img src="food.jpg" alt="food" loading="lazy" /></a>
+        <a href="Dunk 2.jpg"
+          ><img src="Dunk 2.jpg" alt="dunk 2" loading="lazy"
+        /></a>
+        <a href="IMG_9300.jpg"
+          ><img src="IMG_9300.jpg" alt="IMG_9300" loading="lazy"
         /></a>
         <a href="DSC09538.jpg"
           ><img src="DSC09538.jpg" alt="DSC09538" loading="lazy"
@@ -309,84 +196,71 @@
         <a href="DSC09853.jpg"
           ><img src="DSC09853.jpg" alt="DSC09853" loading="lazy"
         /></a>
-        <a href="DSC09882.jpg"
-          ><img src="DSC09882.jpg" alt="DSC09882" loading="lazy"
+        <a href="leaf.jpg"><img src="leaf.jpg" alt="leaf" loading="lazy" /></a>
+        <a href="pole.jpg"><img src="pole.jpg" alt="pole" loading="lazy" /></a>
+        <a href="DSC08158.jpg"
+          ><img src="DSC08158.jpg" alt="DSC08158" loading="lazy"
         /></a>
-        <a href="DSC00080.jpg"
-          ><img src="DSC00080.jpg" alt="DSC00080" loading="lazy"
+        <a href="B5.jpg"><img src="B5.jpg" alt="B5" loading="lazy" /></a>
+        <a href="RP.jpg"><img src="RP.jpg" alt="rp" loading="lazy" /></a>
+        <a href="Sea.jpg"><img src="Sea.jpg" alt="sea" loading="lazy" /></a>
+        <a href="IMG_9271.jpg"
+          ><img src="IMG_9271.jpg" alt="IMG_9271" loading="lazy"
         /></a>
-
-        <!-- IMG Series -->
         <a href="IMG_0066.jpg"
           ><img src="IMG_0066.jpg" alt="IMG_0066" loading="lazy"
         /></a>
         <a href="IMG_0067.jpg"
           ><img src="IMG_0067.jpg" alt="IMG_0067" loading="lazy"
         /></a>
-        <a href="IMG_0118.jpg"
-          ><img src="IMG_0118.jpg" alt="IMG_0118" loading="lazy"
-        /></a>
-        <a href="IMG_0142.jpg"
-          ><img src="IMG_0142.jpg" alt="IMG_0142" loading="lazy"
+        <a href="APC_0068.jpg"
+          ><img src="APC_0068.jpg" alt="APC_0068" loading="lazy"
         /></a>
         <a href="IMG_0198.jpg"
           ><img src="IMG_0198.jpg" alt="IMG_0198" loading="lazy"
         /></a>
-        <a href="IMG_0206.jpg"
-          ><img src="IMG_0206.jpg" alt="IMG_0206" loading="lazy"
+        <a href="DSC08739.jpg"
+          ><img src="DSC08739.jpg" alt="DSC08739" loading="lazy"
         /></a>
-        <a href="IMG_0282.jpg"
-          ><img src="IMG_0282.jpg" alt="IMG_0282" loading="lazy"
-        /></a>
-        <a href="IMG_1021.jpg"
-          ><img src="IMG_1021.jpg" alt="IMG_1021" loading="lazy"
-        /></a>
-        <a href="IMG_9215.jpg"
-          ><img src="IMG_9215.jpg" alt="IMG_9215" loading="lazy"
-        /></a>
-        <a href="IMG_9269.jpg"
-          ><img src="IMG_9269.jpg" alt="IMG_9269" loading="lazy"
-        /></a>
-        <a href="IMG_9271.jpg"
-          ><img src="IMG_9271.jpg" alt="IMG_9271" loading="lazy"
-        /></a>
-        <a href="IMG_9300.jpg"
-          ><img src="IMG_9300.jpg" alt="IMG_9300" loading="lazy"
-        /></a>
-        <a href="IMG_9305.jpg"
-          ><img src="IMG_9305.jpg" alt="IMG_9305" loading="lazy"
-        /></a>
-        <a href="APC_0068.jpg"
-          ><img src="APC_0068.jpg" alt="APC_0068" loading="lazy"
-        /></a>
-
-        <!-- Other -->
-        <a href="think different 1.jpg"
-          ><img
-            src="think different 1.jpg"
-            alt="Think Different artwork"
-            loading="lazy"
-        /></a>
-        <a href="pole.jpg"
-          ><img src="pole.jpg" alt="Pole photography" loading="lazy"
-        /></a>
-        <a href="B5.jpg"
-          ><img src="B5.jpg" alt="B5 photography" loading="lazy"
-        /></a>
-        <a href="RP.jpg"
-          ><img src="RP.jpg" alt="RP photography" loading="lazy"
+        <a href="Brooklyn Bridge.jpg"
+          ><img src="Brooklyn Bridge.jpg" alt="Brooklyn Bridge" loading="lazy"
         /></a>
         <a href="Lab12 d2.jpg"
-          ><img src="Lab12 d2.jpg" alt="Lab 12 photography" loading="lazy"
+          ><img src="Lab12 d2.jpg" alt="Lab12 d2" loading="lazy"
         /></a>
-        <a href="M1.jpg"
-          ><img src="M1.jpg" alt="M1 photography" loading="lazy"
+        <a href="sunset 2.jpg"
+          ><img src="sunset 2.jpg" alt="sunset 2" loading="lazy"
         /></a>
-        <a href="m2.jpg"
-          ><img src="m2.jpg" alt="M2 photography" loading="lazy"
+        <a href="Purple.jpg"
+          ><img src="Purple.jpg" alt="purple" loading="lazy"
         /></a>
-        <a href="sp1.jpg"
-          ><img src="sp1.jpg" alt="SP1 photography" loading="lazy"
+        <a href="glass.jpg"
+          ><img src="glass.jpg" alt="glass" loading="lazy"
+        /></a>
+        <a href="view.jpg"><img src="view.jpg" alt="view" loading="lazy" /></a>
+        <a href="B&W Bridge.jpg"
+          ><img src="B&W Bridge.jpg" alt="B&W Bridge" loading="lazy"
+        /></a>
+        <a href="Blue Bridge.jpg"
+          ><img src="Blue Bridge.jpg" alt="Blue Bridge" loading="lazy"
+        /></a>
+        <a href="sunset.jpg"
+          ><img src="sunset.jpg" alt="sunset" loading="lazy"
+        /></a>
+        <a href="Egg 1.jpg"
+          ><img src="Egg 1.jpg" alt="egg 1" loading="lazy"
+        /></a>
+        <a href="egg 3.jpg"
+          ><img src="egg 3.jpg" alt="egg 3" loading="lazy"
+        /></a>
+        <a href="egg 6.jpg"
+          ><img src="egg 6.jpg" alt="egg 6" loading="lazy"
+        /></a>
+        <a href="DSC08204.jpg"
+          ><img src="DSC08204.jpg" alt="DSC08204" loading="lazy"
+        /></a>
+        <a href="DSC00080.jpg"
+          ><img src="DSC00080.jpg" alt="DSC00080" loading="lazy"
         /></a>
       </div>
     </section>
