--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <img src="coffee.png" alt="Coffee Branding Project" loading="lazy" />
         </a>
         <p class="project-info">
-          This project explores branding through typography, color, and layout to create a cohesive visual identity. The goal was to communicate a modern, approachable feel while maintaining strong brand consistency across the design.<b><br>Adobe Indesign used</br></b>
+          This project explores branding through typography, color, and layout to create a cohesive visual identity. The goal was to communicate a modern, approachable feel while maintaining strong brand consistency across the design.<b><br>Adobe Indesign</br></b>
         </p>
       </div>
 
@@ -65,7 +65,7 @@
           <img src="park.png" alt="Park Poster Project" loading="lazy" />
         </a>
         <p class="project-info">
-          Assignment was to create a movie night poster that takes place at a park. Poster design emphasizing composition, hierarchy, and outdoor themes.<b><br>Adobe Indesign used</br></b>
+          Assignment was to create a movie night poster that takes place at a park. Poster design emphasizing composition, hierarchy, and outdoor themes.<b><br>Adobe Indesign</br></b>
         </p>
       </div>
 
@@ -75,7 +75,7 @@
           <img src="eye.png" alt="Eye Illustration Project" loading="lazy" />
         </a>
         <p class="project-info">
-          An experimental illustration that blends surreal imagery with strong contrast. This piece explores visual symbolism and creative expression through unconventional composition.<b><br>Adobe Indesign used</br></b>
+          This project centers on pairing provided text with a compelling illustration to test layout and visual balance. The final composition focuses on contrast, hierarchy, and placement to ensure the imagery supports the narrative while guiding the viewer’s eye naturally through the design.<b><br>Adobe Indesign</br></b>
         </p>
       </div>
 
@@ -85,7 +85,7 @@
           <img src="Pekkle.png" alt="Pekkle Project" loading="lazy" />
         </a>
         <p class="project-info">
-          A playful advertising concept built around character-driven branding. This project focuses on tone, audience engagement, and creating a memorable visual identity.<b><br>Adobe Indesign used</br></b>
+          A playful advertising concept built around character-driven branding. This project focuses on tone, audience engagement, and creating a memorable visual identity.<b><br>Adobe Indesign</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -94,7 +94,7 @@
           <img src="OHG-POSTER_QR_code.jpg" alt="OHG Poster Project" loading="lazy" />
         </a>
         <p class="project-info">
-          Created as part of a team competition, this poster addresses healthcare stigma surrounding obesity treatment. My role focused on visual design, iconography, and layout to support an empowering and informative message.<b><br>Adobe Illustrator used</br></b>
+          Created as part of a team competition, this poster addresses healthcare stigma surrounding obesity treatment. My role focused on visual design, iconography, and layout to support an empowering and informative message.<b><br>Adobe Illustrator</br></b>
         </p>
       </div>
 
@@ -106,7 +106,7 @@
           <img src="PB3_BIT.jpg" alt="PB3 Editorial Project" loading="lazy" />
         </a>
         <p class="project-info">
-          An editorial layout project centered on typography, alignment, and pacing. This piece demonstrates control of text flow and visual rhythm across a multi-page design.<b><br>Adobe Illustrator used</br></b>
+          This editorial layout was designed with a meme-inspired approach, focusing on visual pacing, alignment, and how text and imagery work together to create meaning. Rather than promoting the bands themselves the goal was to communicate a tone that still reaches the audience.<b><br>Adobe Illustrator</br></b>
         </p>
       </div>
 
@@ -116,7 +116,7 @@
           <img src="infograph completed p6.jpg" alt="Infographic Project" loading="lazy" />
         </a>
         <p class="project-info">
-          Data visualization project focused on clarity, icons, and hierarchy. <b><br>Adobe Illustrator used</br></b>
+          The project was about how New York City doesn't clean the city hard enough.This infographic was designed to present information clearly and efficiently through strong hierarchy.<b><br>Adobe Illustrator</br></b>
         </p>
       </div>
 
@@ -126,7 +126,7 @@
           <img src="Drugs.png" alt="Drugs Awareness Project" loading="lazy" />
         </a>
         <p class="project-info">
-          An awareness poster designed to communicate a serious message through bold visuals and clear hierarchy. The focus was on impactful design choices that support the message without overwhelming the viewer. <b><br>Adobe Indesign used</br></b>
+          An awareness poster designed to communicate a serious message through bold visuals and clear hierarchy. The focus was on impactful design choices that support the message without overwhelming the viewer. <b><br>Adobe Indesign</br></b>
         </p>
       </div>
 
@@ -136,7 +136,7 @@
           <img src="Hi-Chew.jpg" alt="Hi-Chew Ad Project" loading="lazy" />
         </a>
         <p class="project-info">
-          An advertainment-style concept that combines bold visuals with playful branding. This project explores how humor and pop-culture influence can enhance audience engagement.<b><br>Adobe Illustrator used</br></b>
+          This advertainment-style concept takes a meme-based approach, using humor and bold visuals to capture attention without directly advertising the product.<b><br>Adobe Illustrator</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -145,7 +145,7 @@
           <img src="Horror_pro.jpg" alt="Horror pro" loading="lazy" />
         </a>
         <p class="project-info">
-          Assignment was to rewrite the Pinocchio story and I decided to write him in a horror theme and I designed the cover page of the book.<b><br>Adobe Photoshop used</br></b>
+          Assignment was to rewrite the Pinocchio story and I decided to write him in a horror theme and I designed the cover page of the book.<b><br>Adobe Photoshop</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -154,7 +154,7 @@
           <img src="Horror_Page.jpg" alt="Horror page" loading="lazy" />
         </a>
         <p class="project-info">
-          Assignment was to rewrite the Pinocchio story and I decided to write him in a horror theme and I designed one page of the book.<b><br>Adobe Photoshop used</br></b>
+          Assignment was to rewrite the Pinocchio story and I decided to write him in a horror theme and I designed one page of the book.<b><br>Adobe Photoshop</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -163,7 +163,7 @@
           <img src="Editorial_SB.jpg" alt="Editorial" loading="lazy" />
         </a>
         <p class="project-info">
-          Assignment was to create an editorial and I decided to do an editorial on Sports Betting. This design represents the corruption that takes place in the sports industry<b><br>Adobe Photoshop used</br></b>
+          Assignment was to create an editorial and I decided to do an editorial on Sports Betting. This design represents the corruption that takes place in the sports industry<b><br>Adobe Photoshop</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -172,7 +172,7 @@
           <img src="kobe.png" alt="kobe" loading="lazy" />
         </a>
         <p class="project-info">
-          Assignment was to create a campaign for Nike "Play for the World" I used Kobe who is a popular athlete for representation<b><br>Adobe Photoshop used</br></b>
+          Assignment was to create a campaign for Nike "Play for the World" I used Kobe who is a popular athlete for representation<b><br>Adobe Photoshop</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -181,7 +181,7 @@
           <img src="Plant_color.jpg" alt="Plant" loading="lazy" />
         </a>
         <p class="project-info">
-          Assignment was to draw a plant from observation as realistic as possible. This plant is called "Big Blue" and it can be found at Brooklyn Botanic Garden <b><br>Adobe Photoshop used</br></b>
+          Assignment was to draw a plant from observation as realistic as possible. This plant is called "Big Blue" and it can be found at Brooklyn Botanic Garden <b><br>Adobe Photoshop</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -190,7 +190,7 @@
           <img src="Poster.jpg" alt="Poster" loading="lazy" />
         </a>
         <p class="project-info">
-          Assignment was to create a poster as well as a landscape advertisment for a hotel in outer space. This poster was part of a team project.<b><br>Adobe InDesign used</br></b>
+          Assignment was to create a poster as well as a landscape advertisment for a hotel in outer space. This poster was part of a team project.<b><br>Adobe InDesign</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -199,7 +199,7 @@
           <img src="Billboard final 1.jpg" alt="Billboard" loading="lazy" />
         </a>
         <p class="project-info">
-          This is the billboard for the Galaxy Escape Project. <b><br>Adobe InDesign used</br></b>
+          This is the billboard for the Galaxy Escape Project. <b><br>Adobe InDesign</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -208,7 +208,7 @@
           <img src="spotify_m&a.jpg" alt="Spotify" loading="lazy" />
         </a>
         <p class="project-info">
-          A conceptual advertising piece inspired by Spotify’s branding and tone. This project explores how layout, imagery, and type can work together to promote music-driven storytelling. <b><br>Adobe Photoshop used</br></b>
+          A conceptual advertising piece inspired by Spotify’s branding and tone. This project explores how layout, imagery, and type can work together to promote music-driven storytelling. <b><br>Adobe Photoshop</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -217,7 +217,7 @@
           <img src="PS9.png" alt="PS9" loading="lazy" />
         </a>
         <p class="project-info">
-          A conceptual design project focused on layout and visual experimentation. This piece demonstrates creative problem-solving through composition and image treatment. My role was to design this layout and to organize all the information properly. <b><br>Adobe Illustrator used</br></b>
+          A conceptual design project focused on layout and visual experimentation. This piece demonstrates creative problem-solving through composition and image treatment. My role was to design this layout and to organize all the information properly. <b><br>Adobe Illustrator</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -226,7 +226,7 @@
           <img src="spider.png" alt="spider" loading="lazy" />
         </a>
         <p class="project-info">
-          This project was a redesign for the Spiderman burger at Burger King when Spiderman Across the Spiderverse came out. This project focuses on strong visual impact, brand recognition, and communicating a clear message with minimal elements. <b><br>Adobe Photoshop used</br></b>
+          This project was a redesign for the Spiderman burger at Burger King when Spiderman Across the Spiderverse came out. This project focuses on strong visual impact, brand recognition, and communicating a clear message with minimal elements. <b><br>Adobe Photoshop</br></b>
         </p>
       </div>
       <div class="project-card">
@@ -235,7 +235,7 @@
           <img src="wbp1.png" alt="WB" loading="lazy" />
         </a>
         <p class="project-info">
-          My assignment was to design a logo for an organization called White Bird Production. This project explores how minimal imagery and thoughtful spacing can create a calm, focused visual narrative. <b><br>Adobe Illustrator and Photoshop used</br></b>
+          My assignment was to design a logo for an organization called White Bird Production. This project explores how minimal imagery and thoughtful spacing can create a calm, focused visual narrative. <b><br>Adobe Illustrator and Photoshop</br></b>
         </p>
       </div>
     </div>
