--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
   </section>
 
   <!-- ========== PHOTOGRAPHY SECTION ========== -->
+  <section class="w3-container w3-padding-32" id="photography">
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">
       <span class="w3-padding w3-black w3-opacity-min">
         <b>Photography</b>
